# Seeded with devops-scaffold/roles/project by fmarin at 07/21/2022, 04:08:57 
[tool.poetry]
name = "confluai"
version = "4.0.0"
description = "pinecone"
authors = ["ravi.kongara@empower.com"]

[[tool.poetry.source]]
name = 'personalcapital'
url = 'https://personalcapital.jfrog.io/artifactory/api/pypi/pcap-pypi/simple'
#priority = "default"

# https://poetry.eustace.io/docs/versions/
[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
#pcconfig = "^2.2"
#pcmsg = "^2.0"
# Intiuitive CLI
#fire = "^0.4"
#diskcache = "^5.4"
#pyOptional = "^1.1"


#pandas = "^1.5"
#numpy = "1.26.4"
#psycopg2 = "^2.9"
#pymysql = "^1.0"

pinecone= "5.3.1"
openai = "^1.2.2"
atlassian-python-api = "*"
streamlit = "^1.39.0"
ollama = "^0.3.3"
annotated-types = "^0.7.0"
pydantic-core = "^2.24.0"
httpcore = "^1.0.6"
h11 = "^0.14.0"
langchain = "^0.3.3"
pinecone-client = "^5.0.1"
confluence-py = "^1.0.1"
langchain-community = "^0.3.2"
langchain-pinecone = "^0.2.0"
langchain-openai = "^0.2.2"
sniffio = "^1.3.1"
anyio = "^4.6.0"
distro = "^1.9.0"
jiter = "^0.6.1"
lxml = "^5.3.0"
